<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activities.MainActivity"
              android:padding="30dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/titulo_login"
            android:textSize="25sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/rotulo_tv_nome" />
    <EditText
            android:id="@+id/et_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_et_nome"
            android:inputType="text"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/rotulo_tv_senha" />
    <EditText
            android:id="@+id/et_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_et_senha"
            android:inputType="textPassword" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="30dp"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rotulo_btn_cancelar"/>
        <View
                android:layout_width="25dp"
                android:layout_height="1dp" />
        <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rotulo_btn_login"/>
    </LinearLayout>

</LinearLayout>
